syntax = "proto3";
package wire;


message Checkpoint {
  uint64 SuperFrameN = 1;
  uint64 LastBlockN = 2;
  uint64 TotalCap = 3;
  uint64 LastConsensusTime = 4;
}
